mejoras y correcciones en la memoria

--- a/Documentación/bibliografia.bib
+++ b/Documentación/bibliografia.bib
@@ -33,17 +33,17 @@
   school={Universitat Polit{\`e}cnica de Catalunya}
 }
 
-@misc{AR_company, title={Realidad Aumentada}, url={https://ardev.es/realidad-aumentada/}, journal={Augmented and Virtual Reality Company}
+@misc{AR_company, title={Realidad Aumentada}, howpublished ={\url{https://ardev.es/realidad-aumentada/}},url={https://ardev.es/realidad-aumentada/}, journal={Augmented and Virtual Reality Company}
 }
 
 @misc{barker_2019, title={Merge Cube pone los hologramas en tu mano}, url={https://www.redbull.com/mx-es/merge-cube-hologramas-de-realidad-aumentada}, journal={Red Bull}, publisher={Red Bull}, author={Barker, Phil}, year={2019}, month={Dec}
 }
 
-@misc{vuforia_supported_versions, url={https://library.vuforia.com/articles/Solution/Vuforia-Supported-Versions}, journal={Vuforia Engine Supported Versions}
+@misc{vuforia_supported_versions, title={Vuforia supported versions},howpublished ={\url{https://library.vuforia.com/articles/Solution/Vuforia-Supported-Versions}}, url={https://library.vuforia.com/articles/Solution/Vuforia-Supported-Versions}, journal={Vuforia Engine Supported Versions}
 
 }
 
-@misc{vuforia_scanner, url={https://library.vuforia.com/content/vuforia-library/en/articles/Training/Vuforia-Object-Scanner-Users-Guide.html}, journal={Vuforia Object Scanner}
+@misc{vuforia_scanner,  title={Vuforia Object Scanner},howpublished ={\url{https://library.vuforia.com/content/vuforia-library/en/articles/Training/Vuforia-Object-Scanner-Users-Guide.html}}, url={https://library.vuforia.com/content/vuforia-library/en/articles/Training/Vuforia-Object-Scanner-Users-Guide.html}, journal={Vuforia Object Scanner}
 }
 
 @misc{google, title={ARCore overview  |  Google Developers}, url={https://developers.google.com/ar/discover}, journal={Google}, publisher={Google}
@@ -55,13 +55,29 @@
 @book{linowes_babilinski_2017, place={Birmingham}, title={Augmented reality for developers build practical augmented reality applications with Unity, ARCore, ARKit, and Vuforia}, publisher={Packt}, author={Linowes, Jonathan and Babilinski, Krystian}, year={2017}
 }
 
-@misc{ kudan_developer_hub, title={Kudan AR SDK}, url={https://www.xlsoft.com/doc/kudan/}, journal={The Kudan Developer Hub}}
+@misc{ kudan_developer_hub, 
+	title={Kudan AR SDK},
+	howpublished ={\url{https://www.xlsoft.com/doc/kudan/}}, 
+	url={https://www.xlsoft.com/doc/kudan/}, 
+	journal={The Kudan Developer Hub}}
 
-@misc{8thwall_products, url={https://www.8thwall.com/products}, journal={8th Wall - Products}}
+@misc{8thwall_products, 
+	title={Productos 8thwall},
+	howpublished ={\url{https://www.8thwall.com/products}}, 
+	url={https://www.8thwall.com/products}, 
+	journal={8th Wall - Products}}
 
-@misc{wikitude, title={Wikitude}, url={https://www.wikitude.com/products/wikitude-sdk/}, journal={Wikitude}}
+@misc{wikitude,
+	 title={Wikitude}, 
+	 howpublished ={\url{https://www.wikitude.com/products/wikitude-sdk/}}, 
+	 url={https://www.wikitude.com/products/wikitude-sdk/}, 
+	 journal={Wikitude}}
 
-@misc{ZapStudio, title={Introduction}, url={https://docs.zap.works/studio/getting-started/introduction/}, journal={Studio}}
+@misc{ZapStudio, 
+	title={ZapStudio Introduction},
+	howpublished ={\url{https://docs.zap.works/studio/getting-started/introduction/}}, 
+	url={https://docs.zap.works/studio/getting-started/introduction/},
+	journal={Studio}}
 
 @article{taketomi2017visual,
   title={Visual SLAM algorithms: a survey from 2010 to 2016},
@@ -74,28 +90,65 @@
   publisher={Springer}
 }
 
-@misc{fletcher_2010, title={10 Tech Trends for 2010}, url={http://content.time.com/time/specials/packages/completelist/0,29569,1973759,00.html}, journal={Time}, publisher={Time Inc.}, author={Fletcher, Dan}, year={2010}, month={Mar}}
+@misc{fletcher_2010, 
+	title={10 Tech Trends for 2010},
+	howpublished={\url{http://content.time.com/time/specials/packages/completelist/0,29569,1973759,00.html}},  
+	url={http://content.time.com/time/specials/packages/completelist/0,29569,1973759,00.html}, journal={Time}, 
+	publisher={Time Inc.}, author={Fletcher, Dan}, year={2010}, month={Mar}}
 
-@misc{fotoAR1, title={AR Plus}, url={https://pokemongo.fandom.com/wiki/AR_Plus}, journal={Pokémon GO Wiki}}
+@misc{fotoAR1, 
+	title={AR Plus},
+	howpublished ={\url{https://pokemongo.fandom.com/wiki/AR_Plus}}, 
+	url={https://pokemongo.fandom.com/wiki/AR_Plus}, 
+	journal={Pokémon GO Wiki}}
 
-@misc{fotoAR2, title={Así funciona Live View, las indicaciones con realidad aumentada de Google Maps}, url={https://www.lanacion.com.ar/tecnologia/asi-funciona-live-view-indicaciones-realidad-aumentada-nid2286111}, journal={LA NACION}, publisher={LA NACION}, author={Tomoyose, Guillermo}, year={2019}, month={Sep}}
+@misc{fotoAR2, 
+	title={Así funciona Live View, las indicaciones con realidad aumentada de Google Maps}, url={https://www.lanacion.com.ar/tecnologia/asi-funciona-live-view-indicaciones-realidad-aumentada-nid2286111}, 
+	journal={LA NACION}, 
+	publisher={LA NACION}, 
+	author={Tomoyose, Guillermo},
+	year={2019}, 
+	month={Sep}}
 
-@misc{fotoAR3, title={Realidad Aumentada y educación, la gran revolución en el aula}, url={https://www.isostopy.com/realidad-aumentada-educacion/}, journal={Isostopy}, author={software@isostopy.com, Isostopy and Isostopy and Software@isostopy.com}, year={2018}, month={Sep}}
+@misc{fotoAR3, 
+	title={Realidad Aumentada y educación, la gran revolución en el aula}, url={https://www.isostopy.com/realidad-aumentada-educacion/}, 
+	journal={Isostopy}, 
+	author={software@isostopy.com, Isostopy and Isostopy and Software@isostopy.com}, 
+	year={2018}, 
+	month={Sep}}
 
-@misc{fotoAR4, title={Vuforia Studio}, url={https://www.designtechproducts-ptc-ar.com/vuforia-studio}, journal={Vuforia Studio is Authoring Tool for Augmented Reality Experiences.}}
+@misc{fotoAR4, 
+	title={Vuforia Studio}, 
+	howpublished ={\url{https://www.designtechproducts-ptc-ar.com/vuforia-studio}}, 
+	url={https://www.designtechproducts-ptc-ar.com/vuforia-studio}, 
+	journal={Vuforia Studio is Authoring Tool for Augmented Reality Experiences.}}
 
-@misc{marta_app, title={KUdan AR Case study}, url={https://www.xlsoft.com/en/products/kudan/showcase/marta.html}, journal={エクセルソフト Arction}}
+@misc{marta_app,
+	 title={KUdan AR Case study}, 
+	 howpublished ={\url{https://www.xlsoft.com/en/products/kudan/showcase/marta.html}}, 
+	 url={https://www.xlsoft.com/en/products/kudan/showcase/marta.html}, 
+	 journal={エクセルソフト Arction}}
 
  @misc{ARhistory, title={Augmented Reality: A Comprehensive History (Part 1)}, url={https://blog.vertebrae.com/history-augmented-reality-1}, journal={Vertebrae Blog}, author={Motte, Stefanie}}
  
-  @misc{EspadaDamocles, title={El primer simulador VR de la historia tenía forma de recreativa, y se inventó a finales de los 50}, url={https://www.xataka.com/historia-tecnologica/el-primer-simulador-vr-de-la-historia-tenia-forma-de-recreativa-y-se-invento-a-finales-de-los-50}, journal={Xataka}, publisher={Xataka}, author={FM, Yúbal}, year={2018}, month={Apr}}
+  @misc{EspadaDamocles, 
+  	title={El primer simulador VR de la historia tenía forma de recreativa, y se inventó a finales de los 50}, url={https://www.xataka.com/historia-tecnologica/el-primer-simulador-vr-de-la-historia-tenia-forma-de-recreativa-y-se-invento-a-finales-de-los-50}, 
+  	journal={Xataka}, 
+  	publisher={Xataka}, 
+  	author={FM, Yúbal}, 
+  	year={2018}, 
+  	month={Apr}}
   
   @article{ARevolution,
   	title={AR evolution towards smart contact lens: A hit or a miss?},
   	author={Peethambar, Manu}
   }
 
- @misc{ArQuake, title={ARQuake}, url={https://www.dutchrosemedia.com/augmented-reality-outdoor/arquake/}, journal={Dutch Rose Media}}
+ @misc{ArQuake, 
+ 	title={ARQuake},
+ 	howpublished ={\url{https://www.dutchrosemedia.com/augmented-reality-outdoor/arquake/}}, 
+ 	url={https://www.dutchrosemedia.com/augmented-reality-outdoor/arquake/}, 
+ 	journal={Dutch Rose Media}}
  
  @misc{ wiki:RealidadAumentada,
  	author = "Wikipedia",
@@ -104,3 +157,20 @@
  	url = "https://es.wikipedia.org/w/index.php?title=Realidad_aumentada&oldid=126497279",
  	note = "[Internet; descargado 3-junio-2020]"
  }
+
+@book{theMasterKey,
+	author = "L. Frank Baum's",
+	title  = "The master key: an electrical fairy tale founded upon the mysteries of electricity and the optimism of its devotees",
+	year   = "1901"
+}
+
+@article{azuma1997survey,
+	title={A survey of augmented reality},
+	author={Azuma, Ronald T},
+	journal={Presence: Teleoperators \& Virtual Environments},
+	volume={6},
+	number={4},
+	pages={355--385},
+	year={1997},
+	publisher={MIT Press}
+}
