--- a/Documentación/memoria.tex
+++ b/Documentación/memoria.tex
@@ -387,7 +387,7 @@
 
 \noindent\includegraphics[width=\textwidth]{cabecera}\vspace{1cm}
 
-\noindent D. Pedro Luis Sánchez Ortega, profesor del departamento de nombre departamento, área de nombre área.
+\noindent D. Pedro Luis Sánchez Ortega, profesor del departamento de Ingeniería Electromecánica. Área de Tecnología Electrónica.
 
 \noindent Expone:
 
