--- a/Documentación/tex/2_Objetivos_del_proyecto.tex
+++ b/Documentación/tex/2_Objetivos_del_proyecto.tex
@@ -7,7 +7,7 @@ Se espera de entre las herramientas propuestas poder conocer sus ventajas y desv
 
 Además, se creará un ejemplo desarrollado con las herramientas estudiadas, en el cual se puedan apreciar las cualidades y las ventajas de estas tecnologías que pueden ofrecer, por ejemplo en campos como el de la educación.
 
-Para la creación del ejemplo se tiene como objetivo también el uso del MergeCube\ref{section:mergecube}. El objetivo de su uso, será demostrar la utilidad del Mergecube con la realidad aumentada.
+Para la creación del ejemplo se tiene como objetivo también el uso del MergeCube\ref{section:mergecube}. El objetivo de su uso, será demostrar la utilidad de una herramienta como el Mergecube con la realidad aumentada.
 
  
 
