--- a/Documentación/tex/3_Conceptos_teoricos.tex
+++ b/Documentación/tex/3_Conceptos_teoricos.tex
@@ -8,7 +8,7 @@ La realidad virtual (VR--Virtuality Reality) se diferencia de la anterior, en qu
  
 
 
-El concepto de realidad aumentada fue utilizado por primera vez en 1901 por Frank L Baum en su novela The Master Key( ref), en ella presenta una historia que a un niño le otorgan un regalo, que son como unas gafas que da a entender un concepto de realidad aumentada.
+El concepto de realidad aumentada fue utilizado por primera vez en 1901 por Frank L Baum en su novela The Master Key\cite{theMasterKey}, en ella presenta una historia que a un niño le otorgan un regalo, que son como unas gafas que da a entender un concepto de realidad aumentada.
 
 Décadas mas tarde Morton Helling, conocido como el padre de la realidad virtual, inventó el Sensorama en 1957 y lo patentó en 1962, se trataba de una maquina que intentaba una mayor inmersión con la combinación de una pantalla, ventiladores, olores, una silla que se movía y sonido estéreo. Morton también diseñó TELESPHERE MASK, un aparato que recuerda mucho a las gafas de realidad virtual que conocemos hoy en día.
 
@@ -29,7 +29,7 @@ Dos años mas tarde, Louis Rosenberg construiría el primer sistema inmersivo de
 
 En 1994 se crea KARMA (Knowledge based Augmented Reality for Maintenance Assistance), creado por  Steven Feiner, Blair MacIntyre y Doree Seligmann. Se trata de un sistema de pruebas para el diseño de entornos de realidad aumentada, para usarse en tareas de mantenimiento y reparación.
 
-Ronald T. Azuma  en 1997 escribió <<A survey of Augmented Reality>>, donde explora los diferentes usos que podría tener la realidad aumentada en medicina, producción, investigación, mecánica y entretenimiento.
+Ronald T. Azuma  en 1997 escribió <<A survey of Augmented Reality>>\cite{azuma1997survey}, donde explora los diferentes usos que podría tener la realidad aumentada en medicina, producción, investigación, mecánica y entretenimiento.
 
 En 1999 la NASA emplea la realidad aumentada para mejorar la navegación en sus vuelos de prueba. Ese mismo año, Hirokazu Kato desarrolla ARToolKit, un software para el desarrollo de aplicaciones de realidad aumentada.
 
@@ -211,7 +211,7 @@ Esta disponible en interfaces para C++, Python, Java y MATLAB y es compatible co
 \subsection{8thWall}
 
 8thWall\footnote{\url{https://www.8thwall.com/}}
-es un entorno de desarrollo de realidad aumentada, que se caracteriza principalmente por el WebAR, que da la posibilidad de ejecutar las imágenes AR a través del propio navegador web del dispositivo, sin tener que instalarse ninguna aplicación extra en el mismo\cite{8thwall_products}.
+es un entorno de desarrollo de realidad aumentada, que se caracteriza principalmente por el WebAR, que da la posibilidad de ejecutar las imágenes AR a través del propio navegador web del dispositivo, sin tener que instalarse ninguna aplicación extra en el mismo~\cite{8thwall_products}.
 
 Posee las siguientes características:
 
