--- a/Documentación/tex/1_Introduccion.tex
+++ b/Documentación/tex/1_Introduccion.tex
@@ -13,6 +13,6 @@ Se pueden distinguir dos tipos de realidad aumentada principalmente: los que usa
 Y el segundo tipo la detección del entorno, la cual podrá detectar diferentes planos y paredes reales que podrán usar como referencias, sin la necesidad de necesitar una imagen o código QR concreto.
 
 
-En el proyecto estudiaremos diferentes herramientas de realidad aumentada, comparándolas y posteriormente escogeremos una con la que desarrollar un ejemplo en el que poner en practica las posibilidades de la herramienta. 
+En el proyecto se estudiarán diferentes herramientas de realidad aumentada, comparándolas y posteriormente escogeremos una con la que desarrollar un ejemplo en el que poner en practica las diferentes características de la herramienta.
 
 
