--- a/Documentación/tex/4_Tecnicas_y_herramientas.tex
+++ b/Documentación/tex/4_Tecnicas_y_herramientas.tex
@@ -103,7 +103,7 @@ En el menú en un principio se incorporo un cubo para realizar pruebas en el com
 
 \section{Herramientas de documentación}
 \subsection{\LaTeX} 
-Se trata de un sistema de composición de textos, con el objetivo de la creación de documentos de alta calidad tipográfica.
+Se trata de un sistema de composición de textos, con el objetivo de la creación de documentos de alta calidad tipográfica. Se ha usado TeXstudio y miktex para compilar y editar \LaTeX.
 \section{Herramientas de gestión}
 \subsection{GitHub}
 Se trata de una plataforma donde se pueden guardar con un sistema de control de versiones los proyectos....
@@ -112,13 +112,13 @@ Se trata de una plataforma donde se pueden guardar con un sistema de control de 
 
 \section{Herramientas de desarrollo}
 \subsection{Unity}
-Unity\footnote{\url{https://unity.com/es}}, es un motor gráfico de desarrollo de videojuegos creado por Unity technologies, disponible para Windows,Linux y Mac OS. En el, se pueden desarrollar aplicaciones para distintas plataformas como, Windows, MacOS,Linux, Andorid, iOS, videoconsolas, WebGL, tvOS y Facebook.
+Unity\footnote{\url{https://unity.com/es}}, es un motor gráfico de desarrollo de videojuegos creado por Unity technologies, disponible para Windows, Linux y Mac OS. En él, se pueden desarrollar aplicaciones para distintas plataformas como, Windows, MacOS, Linux, Andorid, iOS, videoconsolas, WebGL, tvOS y Facebook.
 \subsection{VisualStudio}
-ViusalStudio \footnote{\url{https://visualstudio.microsoft.com/es/}}, se trata de un entorno de desarrollo para Windows, Linux y macOS. Es compatible con múltiples lenguajes de programación. C\# es uno de los principales lenguajes con los que es compatible, y dado que los scripts de Unity son en dicho lenguaje, se ha escogido visual studio para su desarrollo.
+ViusalStudio\footnote{\url{https://visualstudio.microsoft.com/es/}}, se trata de un entorno de desarrollo para Windows, Linux y macOS. Es compatible con múltiples lenguajes de programación. C\# es uno de los principales lenguajes con los que es compatible, y dado que los scripts de Unity son en dicho lenguaje, se ha escogido visual studio para su desarrollo.
 
 \subsection{Vuforia}
 Como se ha explicado en el apartado \ref{sub:Def_Vuforia}, Vuforia\footnote{\url{https://developer.vuforia.com/}} se trata de un SDK para aplicaciones de AR, para las plataformas de Android, iOS, Windows, Unity y HoloLens. Proporciona las herramientas necesarias para desarrollar realidad aumentada en el entorno Unity.
 \subsection{CoSpace}
-Como se exponía en el apartado \ref{sub:Def_Vuforia}, CoSpaces\footnote{\url{https://cospaces.io/edu/}} se trata de  es una plataforma de apoyo educativo. Se puede acceder a ella tanto por web, como desde la aplicación de móvil. Permite crear entornos virtuales y de realidad aumentada para el MergeCube, desde su entorno de desarrollo web.
+Como se expuso en el apartado \ref{sub:Def_Vuforia}, CoSpaces se trata de una plataforma de apoyo educativo. Se puede acceder a ella tanto por web, como desde la aplicación de móvil. Permite crear entornos virtuales y de realidad aumentada para el MergeCube, desde su entorno de desarrollo web.
 
 \section{title}
