Planificación temporal Sprint 20

--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -111,6 +111,11 @@ Otro de los objetivos será el de completar la tabla comparativa añadida en el 
  
  El otro punto del sprint es centrarse en los apartados de los anexos y la memoria que están menos avanzados.
  
+ \subsection{Sprint 20 (17/06/2020 - 24/06/2020)}
+ Para este sprint el objetivo principal es seguir completando la memoria y los anexos. Durante la reunión mencione en que apartados había estado trabajando, y las dudas que me habían surgido a la hora de completar algunos.
+ 
+ Se ha hablado también de implementar la función de realizar capturas de pantalla y que se guarden en la galería, pues en un principio se había propuesto en los requisitos y aun no se había realizado. Por lo demás en la aplicación se seguirá revisando en busca de posibles bugs o pequeños aspectos que se puedan mejorar. 
+ 
 \section{Estudio de viabilidad}
 
 \subsection{Viabilidad económica}
