--- a/Documentación/tex/B_Requisitos.tex
+++ b/Documentación/tex/B_Requisitos.tex
@@ -174,7 +174,7 @@ En el presente anexo se detallan los objetivos generales de la aplicación desar
 
 \subsection{Actores}
 \begin{itemize}
-	\item \textbf{Usuario:} usuario que hará uso aplicación.
+	\item \textbf{Usuario:} Usuario que hará uso aplicación.
 \end{itemize}
 
 
