--- a/Documentación/tex/C_Diseno.tex
+++ b/Documentación/tex/C_Diseno.tex
@@ -1,13 +1,23 @@
 \apendice{Especificación de diseño}
 
 \section{Introducción}
-
+ Para este apartado se presentarán los diseños que se han seguido para el desarrollo de la aplicación.
+ 
 \section{Diseño de datos}
 
 \section{Diseño procedimental}
 En la figura  \ref{fig:Diagrama} se muestra un diagrama de flujo, en el que se puede observar el comportamiento básico de la aplicación. Para crear el diagrama se ha usado la herramienta online Draw.io\footnote{\url{https://app.diagrams.net/}}.
 \imagen{Diagrama}{Diagrama de flujo del funcionamiento básico de la aplicación.}
+
 \section{Diseño arquitectónico}
+La aplicación al ser construida tendrá por defecto la arquitectura predefinida de Unity. A esta se le añadirá la de Vuforia que sera un complemento de la de Unity.
+
+También formarán parte del diseño el sistema operativo del dispositivo y la cámara. La cámara será la encargada de recoger la señal de entrada de vídeo, esta será procesado por el sistema operativo para su uso en la aplicación. La capa de Unity y vuforia al detectar la señal de vídeo comenzará .... la parte de unity será la encargada de ejecutar los scripts... mientras que la de Vuforia será la que detecta los target......
+.
+.
+.
+
+
 \section{Diseño de interfaz}
 
 En las siguientes imágenes se pueden ver, el prototipo de interfaz pensado para la aplicación. 
