--- a/Documentación/tex/D_Manual_programador.tex
+++ b/Documentación/tex/D_Manual_programador.tex
@@ -55,4 +55,6 @@ Dado que en el ejemplo realizado en Unity se utiliza Vuforia como herramienta de
 
 \section{Compilación, instalación y ejecución del proyecto}
 
+El proceso de instalación es sencillo. Una vez descargada la apk el el terminal, se procederá as u ejecución, el propio SO seguirá los pasos necesarios. La única intervención a resaltar, es posible que al tratar de instalar, nos pregunte si deseamos permitir la instalación de origen desconocido, esto se debe a que la apk no se encuentra oficialmente registrada el appstore. Una vez dados los permisos la instalación seguira normalmente.
+
 \section{Pruebas del sistema}
