--- a/Documentación/tex/E_Manual_usuario.tex
+++ b/Documentación/tex/E_Manual_usuario.tex
@@ -17,4 +17,20 @@ También es necesario disponer de un MergeCube, es valido tanto en papel como el
 
 \section{Manual del usuario}
 
+En este apartado se explicará los pasos básicos para aprender a usar la aplicación.
+
+En la pantalla principal, al ejecutar la aplicación, encontraremos un menú con 4 cuatro opciones: Modos de Juego, Opciones, Ayuda , y Info. en la imagen (ref).
+
+En la primera opción ``\textbf{Modos de Juego} '' el usuario podrá buscar entre los diferentes niveles disponibles la aplicación. en la imagen (ref).
+
+En ``\textbf{Opciones}'', se puede configurar diferentes aspectos de la aplicación, como el tipo de target que se usará en la realidad aumentada. en la imagen (ref).
+
+En la opción ``\textbf{Ayuda}'', se ofrece una guía/tutorial para poder resolver las dudas de los usuarios.
+
+Al seleccionar en ``Modos de Juego'' uno de los modos disponibles, escogemos por ejemplo del tema biología vegetal una planta de Girasol. Al seleccionar el modo deseado, la aplicación abrirá la cámara, ahora tendremos una interfaz que mostrará una barra de progreso en la parte superior, un contador del tiempo restante para acabar la fase en la parte superior derecha. En la parte inferior derecha hay un botón que al pulsarse, despliega una barra con las herramientas disponibles para completar las fases.
+En este modo, una vez que la cámara ya está activa, al apuntar el Mergecube, será detectado y se cargará el modelo de realidad aumentada. En este punto es importante recordar, que para una correcta detección de un marcador se precisa de estar en un ambiente con buena iluminación, que el marcador no se vea afectado por sombras o focos de luz que reduzcan su visibilidad para sensor de la cámara.
+
+En caso de tener seleccionado el modo de capturar target, la interfaz contará con dos elementos adicionales. El primero se trata de una barra de colores (rojo, amarillo, verde) que indica la calidad optima para que el objetivo enfocado sea un target. El segundo elemento será el disparador, una vez que tengamos un objetivo optimo que deseemos transformar en un target se deberá presionar el disparador.
+
+En la barra de herramientas contamos con dos elementos, una regadera y un paquete de abono. La primera al seleccionar nos saldrá en pantalla una regadera que automáticamente echará agua, el objetivo es mover el dispositvo hasta conseguir que el agua caiga en el mergecube. Cuando el agua colisione con el modelo proyectado en el mergecube, la barra de progreso subirá. 
 
